--- a/index.html
+++ b/index.html
@@ -3,178 +3,155 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Advanced Stock Tracker</title>
+  <title>Professional Stock Tracker (Finnhub)</title>
 
-  <!-- Tailwind -->
   <script src="https://cdn.tailwindcss.com"></script>
-  <!-- Chart.js -->
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 </head>
 <body class="bg-gray-100 min-h-screen p-6">
 
-  <div class="max-w-5xl mx-auto grid md:grid-cols-3 gap-6">
+<div class="max-w-6xl mx-auto grid lg:grid-cols-4 gap-6">
 
-    <!-- LEFT: SEARCH & WATCHLIST -->
-    <div class="bg-white rounded-2xl shadow p-4">
-      <h2 class="text-xl font-bold mb-3">🔍 Stock Search</h2>
-      <input id="symbolInput" type="text" placeholder="AAPL"
-        class="w-full border rounded-lg px-3 py-2 mb-2" />
-      <button onclick="loadStock()"
-        class="w-full bg-blue-600 text-white py-2 rounded-lg hover:bg-blue-700">Search</button>
+  <!-- LEFT PANEL -->
+  <div class="bg-white rounded-2xl shadow p-4 space-y-4">
+    <h2 class="text-xl font-bold">📈 Stock Tracker</h2>
 
-      <h3 class="font-semibold mt-6 mb-2">⭐ Watchlist</h3>
-      <ul id="watchlist" class="space-y-2"></ul>
+    <input id="symbolInput" placeholder="AAPL" class="w-full border rounded-lg px-3 py-2" />
+    <button onclick="loadStock()" class="w-full bg-blue-600 text-white py-2 rounded-lg">Search</button>
+
+    <div class="flex gap-2">
+      <button onclick="setResolution('D')" class="flex-1 bg-gray-200 rounded py-1">Daily</button>
+      <button onclick="setResolution('15')" class="flex-1 bg-gray-200 rounded py-1">15m</button>
+      <button onclick="setResolution('5')" class="flex-1 bg-gray-200 rounded py-1">5m</button>
     </div>
 
-    <!-- RIGHT: STOCK INFO -->
-    <div class="md:col-span-2 bg-white rounded-2xl shadow p-4">
-      <div id="error" class="text-red-600 hidden"></div>
+    <h3 class="font-semibold">⭐ Watchlist</h3>
+    <ul id="watchlist" class="space-y-2"></ul>
 
-      <div id="stockSection" class="hidden">
-        <div class="flex justify-between items-center mb-4">
-          <h1 id="stockTitle" class="text-2xl font-bold"></h1>
-          <button onclick="addToWatchlist()"
-            class="bg-green-600 text-white px-3 py-1 rounded-lg">+ Watch</button>
-        </div>
+    <h3 class="font-semibold">💼 Portfolio</h3>
+    <button onclick="addToPortfolio()" class="w-full bg-green-600 text-white py-2 rounded-lg">Add Position</button>
+    <ul id="portfolio" class="space-y-2"></ul>
+  </div>
 
-        <div class="grid grid-cols-2 md:grid-cols-4 gap-4 mb-6">
-          <div class="p-3 bg-gray-50 rounded">
-            <p class="text-sm text-gray-500">Price</p>
-            <p id="price" class="font-semibold"></p>
-          </div>
-          <div class="p-3 bg-gray-50 rounded">
-            <p class="text-sm text-gray-500">Change</p>
-            <p id="change"></p>
-          </div>
-          <div class="p-3 bg-gray-50 rounded">
-            <p class="text-sm text-gray-500">Volume</p>
-            <p id="volume"></p>
-          </div>
-          <div class="p-3 bg-gray-50 rounded">
-            <p class="text-sm text-gray-500">Last Day</p>
-            <p id="lastDay"></p>
-          </div>
-        </div>
+  <!-- MAIN PANEL -->
+  <div class="lg:col-span-3 bg-white rounded-2xl shadow p-4 space-y-6">
 
-        <canvas id="priceChart" height="120"></canvas>
+    <div id="error" class="text-red-600 hidden"></div>
+
+    <div id="stockSection" class="hidden space-y-4">
+      <div class="flex justify-between items-center">
+        <h1 id="stockTitle" class="text-2xl font-bold"></h1>
+        <button onclick="addToWatchlist()" class="bg-blue-600 text-white px-3 py-1 rounded">+ Watch</button>
+      </div>
+
+      <div class="grid grid-cols-2 md:grid-cols-4 gap-4">
+        <div class="p-3 bg-gray-50 rounded">Price<br><span id="price"></span></div>
+        <div class="p-3 bg-gray-50 rounded">Change<br><span id="change"></span></div>
+        <div class="p-3 bg-gray-50 rounded">Sentiment<br><span id="sentiment"></span></div>
+        <div class="p-3 bg-gray-50 rounded">Updated<br><span id="lastDay"></span></div>
+      </div>
+
+      <canvas id="priceChart" height="120"></canvas>
+
+      <div>
+        <h3 class="font-semibold mb-2">📰 Company News</h3>
+        <ul id="news" class="space-y-2"></ul>
       </div>
     </div>
   </div>
+</div>
 
 <script>
-const API_KEY = "7A48DHS27SKTE670";
+const FINNHUB_KEY = "d5eaap9r01qjckl2rtg0d5eaap9r01qjckl2rtgg";
 let currentSymbol = "";
 let chart;
+let resolution = 'D';
 
-// ---------------- WATCHLIST ----------------
-function getWatchlist() {
-  return JSON.parse(localStorage.getItem("watchlist") || "[]");
+// ---------- STORAGE ----------
+const getLS = k => JSON.parse(localStorage.getItem(k) || '[]');
+const setLS = (k,v) => localStorage.setItem(k, JSON.stringify(v));
+
+// ---------- WATCHLIST ----------
+function addToWatchlist(){
+  const list = getLS('watchlist');
+  if(!list.includes(currentSymbol)) list.push(currentSymbol);
+  setLS('watchlist', list); renderWatchlist();
 }
-
-function saveWatchlist(list) {
-  localStorage.setItem("watchlist", JSON.stringify(list));
-  renderWatchlist();
-}
-
-function addToWatchlist() {
-  const list = getWatchlist();
-  if (!list.includes(currentSymbol)) {
-    list.push(currentSymbol);
-    saveWatchlist(list);
-  }
-}
-
-function removeFromWatchlist(symbol) {
-  const list = getWatchlist().filter(s => s !== symbol);
-  saveWatchlist(list);
-}
-
-function renderWatchlist() {
-  const ul = document.getElementById("watchlist");
-  ul.innerHTML = "";
-  getWatchlist().forEach(symbol => {
-    const li = document.createElement("li");
-    li.className = "flex justify-between items-center bg-gray-100 px-3 py-2 rounded cursor-pointer";
-    li.innerHTML = `
-      <span onclick="loadStock('${symbol}')">${symbol}</span>
-      <button onclick="removeFromWatchlist('${symbol}')" class="text-red-500">✕</button>
-    `;
-    ul.appendChild(li);
+function renderWatchlist(){
+  const ul = document.getElementById('watchlist'); ul.innerHTML='';
+  getLS('watchlist').forEach(s=>{
+    ul.innerHTML += `<li class="flex justify-between bg-gray-100 p-2 rounded">
+      <span onclick="loadStock('${s}')" class="cursor-pointer">${s}</span>
+      <button onclick="removeFrom('watchlist','${s}')">✕</button></li>`;
   });
 }
 
-// ---------------- STOCK LOAD ----------------
-async function loadStock(symbolOverride) {
-  const symbol = (symbolOverride || document.getElementById("symbolInput").value)
-    .trim().toUpperCase();
+// ---------- PORTFOLIO ----------
+function addToPortfolio(){
+  const qty = prompt('Shares:');
+  const price = prompt('Buy price:');
+  if(!qty || !price) return;
+  const p = getLS('portfolio');
+  p.push({symbol:currentSymbol, qty:+qty, price:+price});
+  setLS('portfolio', p); renderPortfolio();
+}
+function renderPortfolio(){
+  const ul = document.getElementById('portfolio'); ul.innerHTML='';
+  getLS('portfolio').forEach(pos=>{
+    ul.innerHTML += `<li class="bg-gray-100 p-2 rounded">${pos.symbol} | ${pos.qty} @ $${pos.price}</li>`;
+  });
+}
 
-  if (!symbol) return;
-  currentSymbol = symbol;
+function removeFrom(k,s){ setLS(k,getLS(k).filter(x=>x!==s)); renderWatchlist(); }
 
-  document.getElementById("error").classList.add("hidden");
+// ---------- RESOLUTION ----------
+function setResolution(r){ resolution=r; loadStock(currentSymbol); }
 
-  try {
-    const quoteUrl = `https://www.alphavantage.co/query?function=GLOBAL_QUOTE&symbol=${symbol}&apikey=${API_KEY}`;
-    const dailyUrl = `https://www.alphavantage.co/query?function=TIME_SERIES_DAILY&symbol=${symbol}&apikey=${API_KEY}`;
+// ---------- LOAD STOCK ----------
+async function loadStock(sym){
+  currentSymbol = (sym || symbolInput.value).toUpperCase();
+  if(!currentSymbol) return;
 
-    const [quoteRes, dailyRes] = await Promise.all([
-      fetch(quoteUrl), fetch(dailyUrl)
+  try{
+    const now = Math.floor(Date.now()/1000);
+    const from = now - 60*60*24*30;
+
+    const [q,c,n,s] = await Promise.all([
+      fetch(`https://finnhub.io/api/v1/quote?symbol=${currentSymbol}&token=${FINNHUB_KEY}`).then(r=>r.json()),
+      fetch(`https://finnhub.io/api/v1/stock/candle?symbol=${currentSymbol}&resolution=${resolution}&from=${from}&to=${now}&token=${FINNHUB_KEY}`).then(r=>r.json()),
+      fetch(`https://finnhub.io/api/v1/company-news?symbol=${currentSymbol}&from=2024-01-01&to=2026-12-31&token=${FINNHUB_KEY}`).then(r=>r.json()),
+      fetch(`https://finnhub.io/api/v1/news-sentiment?symbol=${currentSymbol}&token=${FINNHUB_KEY}`).then(r=>r.json())
     ]);
 
-    const quoteData = await quoteRes.json();
-    const dailyData = await dailyRes.json();
+    document.getElementById('stockTitle').textContent=currentSymbol;
+    price.textContent=`$${q.c.toFixed(2)}`;
+    change.textContent=`${q.d.toFixed(2)} (${q.dp.toFixed(2)}%)`;
+    change.className=q.d>=0?'text-green-600':'text-red-600';
+    lastDay.textContent=new Date(q.t*1000).toLocaleDateString();
+    sentiment.textContent=(s.sentiment?.score||0).toFixed(2);
 
-    if (!quoteData['Global Quote']) throw new Error("Invalid symbol or API limit reached");
+    drawChart(c);
+    renderNews(n.slice(0,5));
 
-    const q = quoteData['Global Quote'];
-
-    document.getElementById("stockTitle").textContent = symbol;
-    document.getElementById("price").textContent = `$${(+q['05. price']).toFixed(2)}`;
-
-    const ch = +q['09. change'];
-    const chEl = document.getElementById("change");
-    chEl.textContent = `${ch.toFixed(2)} (${q['10. change percent']})`;
-    chEl.className = ch >= 0 ? "text-green-600" : "text-red-600";
-
-    document.getElementById("volume").textContent = (+q['06. volume']).toLocaleString();
-    document.getElementById("lastDay").textContent = q['07. latest trading day'];
-
-    document.getElementById("stockSection").classList.remove("hidden");
-
-    drawChart(dailyData['Time Series (Daily)']);
-
-  } catch (e) {
-    const err = document.getElementById("error");
-    err.textContent = e.message;
-    err.classList.remove("hidden");
-  }
+    stockSection.classList.remove('hidden');
+  }catch(e){ error.textContent=e.message; error.classList.remove('hidden'); }
 }
 
-// ---------------- CHART ----------------
-function drawChart(series) {
-  const dates = Object.keys(series).slice(0, 30).reverse();
-  const prices = dates.map(d => +series[d]['4. close']);
+// ---------- CHART ----------
+function drawChart(d){
+  if(d.s!=='ok') return;
+  if(chart) chart.destroy();
+  chart=new Chart(priceChart,{type:'line',data:{labels:d.t.map(t=>new Date(t*1000).toLocaleDateString()),datasets:[{data:d.c,tension:.3}]},options:{plugins:{legend:{display:false}}}});
+}
 
-  if (chart) chart.destroy();
-
-  chart = new Chart(document.getElementById("priceChart"), {
-    type: 'line',
-    data: {
-      labels: dates,
-      datasets: [{
-        label: 'Closing Price',
-        data: prices,
-        tension: 0.3
-      }]
-    },
-    options: {
-      responsive: true,
-      plugins: { legend: { display: false } }
-    }
-  });
+// ---------- NEWS ----------
+function renderNews(list){
+  news.innerHTML='';
+  list.forEach(a=>news.innerHTML+=`<li class="bg-gray-100 p-2 rounded"><a href="${a.url}" target="_blank" class="font-semibold">${a.headline}</a></li>`);
 }
 
 renderWatchlist();
+renderPortfolio();
 </script>
 </body>
 </html>
